// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for multiple ids 1`] = `
"WITH
TARGET_CPH AS (
  SELECT
    CPH.CPH,
    CPH.CPH_TYPE,
    SUBSTR(CPH.CPH, 1, 6) AS COUNTY_PARISH_CODE
  FROM AHBRP.CPH
  WHERE CPH.CPH IN ('11/111/1111', '22/222/2222')
),
ACTIVE_HOLDERSHIP AS (
  SELECT
    TC.CPH,
    TC.CPH_TYPE,
    TC.COUNTY_PARISH_CODE,
    L.LOCATION_ID,
    P.PARTY_ID
  FROM TARGET_CPH TC
  JOIN AHBRP.FEATURE_INVOLVEMENT FI ON FI.CPH = TC.CPH
  JOIN AHBRP.LOCATION L ON L.FEATURE_PK = FI.FEATURE_PK
  JOIN AHBRP.FEATURE_STATE FS ON FS.FEATURE_PK = FI.FEATURE_PK
  JOIN AHBRP.PARTY_ROLE PR ON PR.PARTY_ROLE_PK = FI.PARTY_ROLE_PK
  JOIN AHBRP.PARTY P ON P.PARTY_PK = PR.PARTY_PK
  JOIN AHBRP.PARTY_STATE PS ON PS.PARTY_PK = P.PARTY_PK
  WHERE FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
    AND FI.FEATURE_INVOLV_TO_DATE IS NULL
    AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
    AND FS.FEATURE_STATE_TO_DTTM IS NULL
    AND PR.PARTY_ROLE_TO_DATE IS NULL
    AND PS.PARTY_STATUS_CODE <> 'INACTIVE'
    AND PS.PARTY_STATE_TO_DTTM IS NULL
),
LOCAL_AUTHORITY AS (
  SELECT
    RDCD.SHORT_DESCRIPTION AS LA_NAME,
    RDC.CODE AS LA_NUMBER,
    RDC1.CODE AS COUNTY_PARISH_CODE
  FROM AHBRP.REF_DATA_SET_MAP RDSM
  JOIN AHBRP.REF_DATA_CODE_MAP RDCM ON RDSM.REF_DATA_SET_MAP_PK = RDCM.REF_DATA_SET_MAP_PK
  JOIN AHBRP.REF_DATA_CODE RDC ON RDCM.FROM_REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
  JOIN AHBRP.REF_DATA_CODE RDC1 ON RDCM.TO_REF_DATA_CODE_PK = RDC1.REF_DATA_CODE_PK
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD ON RDC.REF_DATA_CODE_PK = RDCD.REF_DATA_CODE_PK
  WHERE RDSM.REF_DATA_SET_MAP_NAME = 'LOCAL_AUTHORITY_COUNTY_PARISH'
    AND RDSM.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDCM.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDC.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDC1.EFFECTIVE_TO_DATE = '31/DEC/9999'
)
SELECT DISTINCT
  AH.CPH AS CPH_ID,
  'ACTIVE' AS CPH_HOLDERSHIP_ACTIVE,
  AH.CPH_TYPE,
  LA.LA_NAME,
  LA.LA_NUMBER,
  AH.LOCATION_ID,
  AH.PARTY_ID
FROM ACTIVE_HOLDERSHIP AH
LEFT JOIN LOCAL_AUTHORITY LA ON AH.COUNTY_PARISH_CODE = LA.COUNTY_PARISH_CODE
"
`;

exports[`returns the expected query for valid parameters 1`] = `
"WITH
TARGET_CPH AS (
  SELECT
    CPH.CPH,
    CPH.CPH_TYPE,
    SUBSTR(CPH.CPH, 1, 6) AS COUNTY_PARISH_CODE
  FROM AHBRP.CPH
  WHERE CPH.CPH IN ('11/111/1111')
),
ACTIVE_HOLDERSHIP AS (
  SELECT
    TC.CPH,
    TC.CPH_TYPE,
    TC.COUNTY_PARISH_CODE,
    L.LOCATION_ID,
    P.PARTY_ID
  FROM TARGET_CPH TC
  JOIN AHBRP.FEATURE_INVOLVEMENT FI ON FI.CPH = TC.CPH
  JOIN AHBRP.LOCATION L ON L.FEATURE_PK = FI.FEATURE_PK
  JOIN AHBRP.FEATURE_STATE FS ON FS.FEATURE_PK = FI.FEATURE_PK
  JOIN AHBRP.PARTY_ROLE PR ON PR.PARTY_ROLE_PK = FI.PARTY_ROLE_PK
  JOIN AHBRP.PARTY P ON P.PARTY_PK = PR.PARTY_PK
  JOIN AHBRP.PARTY_STATE PS ON PS.PARTY_PK = P.PARTY_PK
  WHERE FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
    AND FI.FEATURE_INVOLV_TO_DATE IS NULL
    AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
    AND FS.FEATURE_STATE_TO_DTTM IS NULL
    AND PR.PARTY_ROLE_TO_DATE IS NULL
    AND PS.PARTY_STATUS_CODE <> 'INACTIVE'
    AND PS.PARTY_STATE_TO_DTTM IS NULL
),
LOCAL_AUTHORITY AS (
  SELECT
    RDCD.SHORT_DESCRIPTION AS LA_NAME,
    RDC.CODE AS LA_NUMBER,
    RDC1.CODE AS COUNTY_PARISH_CODE
  FROM AHBRP.REF_DATA_SET_MAP RDSM
  JOIN AHBRP.REF_DATA_CODE_MAP RDCM ON RDSM.REF_DATA_SET_MAP_PK = RDCM.REF_DATA_SET_MAP_PK
  JOIN AHBRP.REF_DATA_CODE RDC ON RDCM.FROM_REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
  JOIN AHBRP.REF_DATA_CODE RDC1 ON RDCM.TO_REF_DATA_CODE_PK = RDC1.REF_DATA_CODE_PK
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD ON RDC.REF_DATA_CODE_PK = RDCD.REF_DATA_CODE_PK
  WHERE RDSM.REF_DATA_SET_MAP_NAME = 'LOCAL_AUTHORITY_COUNTY_PARISH'
    AND RDSM.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDCM.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDC.EFFECTIVE_TO_DATE = '31/DEC/9999'
    AND RDC1.EFFECTIVE_TO_DATE = '31/DEC/9999'
)
SELECT DISTINCT
  AH.CPH AS CPH_ID,
  'ACTIVE' AS CPH_HOLDERSHIP_ACTIVE,
  AH.CPH_TYPE,
  LA.LA_NAME,
  LA.LA_NUMBER,
  AH.LOCATION_ID,
  AH.PARTY_ID
FROM ACTIVE_HOLDERSHIP AH
LEFT JOIN LOCAL_AUTHORITY LA ON AH.COUNTY_PARISH_CODE = LA.COUNTY_PARISH_CODE
"
`;
